fix: spacing, selectDisable class

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -80,6 +80,7 @@ h1 {
     font-family: 'Playfair Display', serif;
     font-weight: 700;
     position: relative;
+    margin-bottom: 1rem;
 }
 
 h2 {
@@ -116,4 +117,12 @@ a {
 
 .class a {
     margin: 1rem;
+}
+
+.selectDisable {
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -o-user-select: none;
+    user-select: none;
 }
